--- a/templates/admin.html
+++ b/templates/admin.html
@@ -13,8 +13,8 @@
 <p><strong>Last Name:</strong> {{ last_name }}</p>
 <p><strong>Email:</strong> {{ email }}</p>
 <p><strong>Phone:</strong> {{ phone }}</p>
-<p><strong>Telegram:</strong> {{ telegram }}</p>
-<p><strong>Country:</strong> {{ country }}</p>
+<p><strong>Telegram:</strong> {{ messenger }}</p>
+<p><strong>Country:</strong>India</p>
 <p><strong>Preferred Payment Method:</strong> {{ preferred_payment_method }}</p>
 <p><strong>User Account:</strong> {{ user_account }}</p>
 <p><strong>Website:</strong> {{ website }}</p>
