--- a/templates/register1.html
+++ b/templates/register1.html
@@ -3524,9 +3524,56 @@
       ><link rel=stylesheet
       href='./public/styles.580aeeb1942d3455536f.css'></noscript
     >
+    <style>
+ #register-messages .alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+
+#register-messages .alert-success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+
+#register-messages .alert-error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
+}
+
+</style>
+
   </head>
 
   <body>
+
+{% if messages %}
+  <div id="register-messages" class="messages">
+    {% for message in messages %}
+      <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">
+        {{ message }}
+      </div>
+    {% endfor %}
+  </div>
+  <script>
+    // Automatically hide registration messages after 5 seconds
+    setTimeout(() => {
+      const registerMessages = document.getElementById('register-messages');
+      if (registerMessages) {
+        registerMessages.style.transition = 'opacity 1s';
+        registerMessages.style.opacity = '0';
+        setTimeout(() => {
+          registerMessages.remove(); // Completely remove the element after fading out
+        }, 1000); // 1 second for the fade-out
+      }
+    }, 5000); // 5000 milliseconds = 5 seconds
+  </script>
+{% endif %}
+
+
+
     <!-- Content -->
     <div id="root">
       <div class="ContentWrapper-sc-14sggwv-0 cYOodx">
