--- a/templates/webpages.html
+++ b/templates/webpages.html
@@ -125,7 +125,7 @@
             </svg> &nbsp; &nbsp;&nbsp; Aff. ID: {{i.userid}}</div>
             {% endfor %}
             <hr style="border: 0.5px solid #444;">
-            <a href="#" style="
+            <a href="{% url 'logout_view' %}" style="
               display: block;
               padding: 10px;
               color: rgb(230, 229, 229);
